--- a/WebAss2/Site.Master
+++ b/WebAss2/Site.Master
@@ -47,14 +47,27 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Application name</a>
+                    <a class="navbar-brand" style="color:darkorange; font-weight:bold;" runat="server" href="~/">ticketo</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
+                        <li><a runat="server" href="~/Events">Events</a></li>
+                        <%--<li><a runat="server" href="~/Contact">Reservations</a></li>--%>
+                        <li class="dropdown">
+                          <a runat="server" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Reservations<span class="caret"></span></a>
+                          <ul class="dropdown-menu">
+                            <li><a runat="server" href="~/Contact">Check Status</a></li>
+                            <li><a runat="server" href="~/Contact">Cancel Reservation</a></li>
+                          </ul>
+                        </li>
                     </ul>
+
+                    <ul class="nav navbar-nav navbar-right">
+                        <%--<li><a runat="server" href="~/Account/Register">Register</a></li>--%>
+                        <li><a runat="server" href="~/Login">Log in</a></li>
+                    </ul>
+
                 </div>
             </div>
         </div>
@@ -63,10 +76,9 @@
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                <p>&copy; <%: DateTime.Now.Year %> - ticketo</p>
             </footer>
         </div>
-
     </form>
 </body>
 </html>
