--- a/WebAss2/Site.Master
+++ b/WebAss2/Site.Master
@@ -6,7 +6,7 @@
 <head runat="server">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - My ASP.NET Application</title>
+    <title><%: Page.Title %> - Ticketo</title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
@@ -65,7 +65,7 @@
 
                     <ul class="nav navbar-nav navbar-right">
                         <%--<li><a runat="server" href="~/Account/Register">Register</a></li>--%>
-                        <li><a runat="server" href="~/Login">Log in</a></li>
+                        <li><a runat="server" href="~/Login">Admin/Clerk</a></li>
                     </ul>
 
                 </div>
