70 percent done yo

--- a/WebAss2/Site.Master
+++ b/WebAss2/Site.Master
@@ -57,8 +57,8 @@
                         <li class="dropdown">
                           <a runat="server" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Reservations<span class="caret"></span></a>
                           <ul class="dropdown-menu">
-                            <li><a runat="server" href="~/Contact">Check Status</a></li>
-                            <li><a runat="server" href="~/Contact">Cancel Reservation</a></li>
+                            <li><a runat="server" href="~/CheckStatus">Check Status</a></li>
+                            <li><a runat="server" href="~/CancelReservation">Cancel Reservation</a></li>
                           </ul>
                         </li>
                     </ul>
